snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.081412-1-sources.jar.sha256
4a4ce4c58f1fa0f3d094a57e0fa4de2e4697cc0bcfa1d5f5501265121c29fc90